config-root/namespaces/jx-staging/fmtok8s-monolith/fmtok8s-monolith-fmtok8s-monolith-deploy.yaml
# Source: fmtok8s-monolith/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fmtok8s-monolith-fmtok8s-monolith
  labels:
    draft: draft-app
    chart: "fmtok8s-monolith-0.0.22"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  namespace: jx-staging
  annotations:
    wave.pusher.com/update-on-config-change: 'true'
spec:
  selector:
    matchLabels:
      app: fmtok8s-monolith-fmtok8s-monolith
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: fmtok8s-monolith-fmtok8s-monolith
    spec:
      containers:
        - name: fmtok8s-monolith
          image: "gcr.io/camunda-researchanddevelopment/fmtok8s-monolith:0.0.22"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 1500m
              memory: 1768Mi
            requests:
              cpu: 750m
              memory: 1024Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
